SFUSA/force-app/main/default/objects/Custom_Exception_Logs__c/fields/Error_Type__c.field-meta.xml
<CustomField>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>